<resources>
    <string name="app_name">ProyectoVademecum</string>
    <string name="Slogan">Diccionario farmacologico\npara el acceso de cualquiera</string>
    <string name="logo_app">Logo APP</string>
    <string name="Descriciónapp">Diccionario farmacologico</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="registro">Registro</string>
    <string name="emergencias">Emergencias</string>
    <string name="title_activity_login">activity_login</string>
    <string name="bienvenida">Bienvenido a Vademecum</string>
    <string name="IS_1">E-mail</string>
    <string name="IS_contraseña">Contraseña</string>
    <string name="Olvido_Contraseña">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="tipo_de_persona">Tipo de persona</string>
    <string name="registro_contraseña">Contraseña</string>
    <string name="confirmar_contraseña">Confirmar contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="notas_clinicas_titulo">Notas Clinicas</string>
    <string name="agregar_nota_boton">Agregar nota</string>
    <string name="eliminar">Eliminar</string>
    <string name="contenido_de_la_nota">Contenido de la nota...</string>
    <string name="nota_1">Nota 1</string>
    <string name="titulo">Título</string>
    <string name="contenido">Contenido</string>
    <string name="eliminar_nota_descripción">Eliminar nota</string>
    <string name="texto_nohaynotas">En este punto no hay notas</string>
    <string name="Apartado_notas">En este apartado estarían apuntes privados de los médicos</string>
    <string name="cuenta">Cuenta</string>
    <string name="b_squeda">Busqueda</string>
    <string name="favoritos">Favoritos</string>
    <string name="preescripci_n">Preescripción</string>
    <string name="calculadora_dosis">Calculadora Dosis</string>
    <string name="b_squeda_por_tipos">Busqueda por tipos</string>
    <string name="historial">Historial</string>
    <string name="por_enfermedad">Busqueda por enfermedad</string>
    <string name="rese_as">Reseñas\n</string>
    <string name="ConfigCuent">Configuración de cuenta</string>
    <string name="notas_cl_nicas">Notas Clínicas\n</string>
    <string name="medicamentos_guardados">Medicamentos guardados</string>
    <string name="subtitulofav">Aqui encontraras los medicamentos guardados</string>
    <string name="textoNoHayhistorial">No has visitado ningun medicamento</string>
    <string name="introhistorial">Aqui encontraras el historial de medicmanetos</string>
    <string name="logo">logoimage\n</string>
    <string name="regresar">boton regresar\n</string>
    <string name="cerrar_sesion">Btn Cierre de sesion</string>
    <string name="perfil">Perfil</string>
    <string name="cambio_de_nombre_de_usuario">Cambio de nombre de usuario</string>
    <string name="InfoUsuario">Nombre\n\nApellidos\n\nFecha nacimiento (YYYY-MM-DD)\n\nTipo de persona\n\nDescripción de perfil</string>
    <string name="configurar_cuenta">Configurar cuenta</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="agregar_foto_de_perfil">Cambiar Foto de Perfil</string>
    <string name="nombre_c">Nombre</string>
    <string name="apellidos_c">Apellidos</string>
    <string name="fecha_nacimiento_yyyy_mm_dd_c">Fecha nacimiento (YYYY-MM-DD)</string>
    <string name="cambio_de_email_c">Cambio de email</string>
    <string name="cambio_de_nombre_de_usuario_c">Cambio de nombre de usuario</string>
    <string name="cambio_tipo_de_persona_C">Cambio Tipo de persona</string>
    <string name="cambio_de_contraseña">Cambio de Contraseña</string>
    <string name="agregar_una_descripci_n_de_perfil_c">Agregar una descripción de perfil</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="ej_prueba_gmail_com">ej: prueba@gmail.com</string>
    <string name="eliminaci_n_de_cuenta">Eliminación de cuenta</string>
    <string name="por_motivos_de_seguridad_se_requiere_que_ingrese_el_c_digo_de_verificaci_n_enviado_a_su_correo_electr_nico_para_validar_su_identidad_y_eliminar_la_cuenta_definitivamente">Por motivos de seguridad se requiere que ingrese el código de verificación enviado a su correo electrónico para validar su identidad y eliminar la cuenta definitivamente</string>
    <string name="c_digo_de_verificaci_n_enviado">Código de verificación enviado</string>
    <string name="reenviar_c_digo_de_verificaci_n">Reenviar código de verificación</string>
    <string name="cancelar">Cancelar</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="volver">volver</string>
    <string name="mis_rese_as">Mis reseñas</string>
    <string name="ver_m_s">ver más...</string>
    <string name="peores_votados">Peores votados</string>
    <string name="mejores_votados">Mejores votados</string>
    <string name="estrella">Estrella</string>
    <string name="medicamento_x">Medicamento X</string>
    <string name="lista_de_rese_as">Lista de reseñas</string>
    <string name="b_squeda_lupit">🔍 Búsqueda...</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="descripci_n_de_la_rese_a">Descripción de la reseña</string>
    <string name="rese_as_del_medicamento">Reseñas del medicamento</string>
    <string name="reseñas">Reseats</string>
    <string name="agregar_rese_a">Agregar Reseña</string>
    <string name="crear_rese_a">Crear Reseña</string>
    <string name="medicamento_seleccionado">Medicamento seleccionado:\n</string>
    <string name="introduzca_el_motivo_de_su_valoraci_n">Introduzca el motivo de su valoración...</string>
    <string name="publicar">Publicar</string>
    <string name="buscar">Buscar</string>
    <string name="crear_una_rese_a">Crear una reseña</string>
    <string name="actualmente_no_tiene_ninguna_rese_a">Actualmente no tiene ninguna reseña</string>
    <string name="acetaminof_n">Acetaminofén</string>
    <string name="nombre_del_medicamento">Nombre del medicamento</string>
    <string name="guardar">Guardar</string>
    <string name="editar_rese_a">Editar Reseña</string>
    <string name="editar">Editar</string>
    <string name="ver_rese_a">Ver Reseña</string>
    <string name="rese_a">Reseña</string>
    <string name="texto_del_resultado">Texto del resultado</string>
    <string name="cerrar_resultados">Cerrar Resultados</string>
    <string name="estado_de_las_rese_as">Estado de las reseñas</string>
    <string name="rese_as__">Reseñas</string>
    <string name="guardar_medicamento">Guardar Medicamento</string>
    <string name="guardar_como_favorito">Guardar como favorito</string>
    <string name="detalles_de_dosis">Detalles de dosis</string>
    <string name="cantidad_de_la_proxima_toma">Cantidad de la proxima toma:</string>
    <string name="tiempo_para_la_pr_xima_toma">Tiempo Para la próxima toma:</string>
    <string name="agregar">agregar</string>
    <string name="agregar_a_orden">Agregar a Orden</string>
    <string name="guardar_prescripci_n">Guardar Prescripción</string>
    <string name="b_squeda2">Búsqueda...</string>
    <string name="nombre_de_la_orden">Nombre de la orden</string>
    <string name="b_squeda_por_tipo_de_medicamento">Búsqueda por tipo de medicamento</string>
    <string name="tipo_de_medicamento">Tipo de medicamento:</string>
</resources>