<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <!-- Encabezado visual -->
        <ImageView
            android:id="@+id/encabezado"
            android:layout_width="280dp"
            android:layout_height="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vademecum_encabezado" />


        <ImageView
            android:id="@+id/atras"
            android:layout_width="53dp"
            android:layout_height="34dp"
            app:layout_constraintBottom_toTopOf="@+id/tituloconfiguracioncuenta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/imgatras" />

        <!-- Título azul -->
        <TextView
            android:id="@+id/tituloconfiguracioncuenta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="#007AC1"
            android:gravity="center"
            android:text="@string/ConfigCuent"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Foto de perfil -->
        <ImageView
            android:id="@+id/fotoPerfil"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/cuenta"
            app:layout_constraintTop_toBottomOf="@id/tituloconfiguracioncuenta"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/agregarFotoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/agregar_foto_de_perfil"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fotoPerfil" />



        <!-- Después -->
        <EditText
            android:id="@+id/etNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Nombre"
            android:text="@string/nombre"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agregarFotoText"/>

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Apellido"
            android:text="@string/apellido"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNombre" />

        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Fecha nacimiento"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etApellido" />



        <EditText
            android:id="@+id/etUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Nombre de usuario"
            android:text="@string/cambio_de_nombre_de_usuario_c"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFechaNacimiento" />

        <AutoCompleteTextView
            android:id="@+id/etTipoPersona"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:hint="@string/tipo_de_persona"
            android:inputType="none"
            android:textColor="#888888"
            android:textColorHint="#888888"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />


        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Descripción del perfil"
            android:text="@string/agregar_una_descripci_n_de_perfil_c"
            android:textColor="#888888"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etTipoPersona" />

        <Button
            android:id="@+id/cambiarContrasena"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/cambio_de_contraseña"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:backgroundTint="#888888"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDescripcion" />


        <!-- Botones -->

        <Button
            android:id="@+id/btnGuardarCambios"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#00B4D8"
            android:text="@string/guardar_cambios"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cambiarContrasena" />

        <Button
            android:id="@+id/btnEliminarCuenta"
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#00B4D8"
            android:text="@string/eliminar_cuenta"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGuardarCambios" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
